--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,12 @@
             <version>2.0.0.Beta2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+
+
     </dependencies>
 </project>
