--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,16 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jibx</groupId>
+            <artifactId>jibx-bind</artifactId>
+            <version>1.2.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5.2</version>
         </dependency>
-
-
     </dependencies>
+
 </project>
